Fix table/chart alignment problem on IE9.
Reported-by: Uwe (and fixed)

--- a/data/css/tjreport.css
+++ b/data/css/tjreport.css
@@ -132,7 +132,7 @@ p.tj_journal {
 .tj_table_cell_icon {
   vertical-align:top;
   text-align:right;
-  padding:2px 3px 0px 0px;
+  padding:1px 3px 0px 0px;
   width:19px;
 }
 
